--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "start": "node src/backend/app.js"
   },
   "dependencies": {
+    "colors": "^1.3.3",
     "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "dotenv": "^6.2.0"
   }
 }
