--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "colors": "^1.3.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "sequelize": "^4.42.0"
   },
   "devDependencies": {
     "dotenv": "^6.2.0"
