--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
-.env
+# dependancies
 node_modules
+.pnp
+.pnp.js
+
+# build
+/dist
+.cache
+
+# misc
 .DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
