--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -4,8 +4,15 @@
   "version": "0.1.0",
   "license": "ISC",
   "dependencies": {
+    "@emotion/core": "^10.0.6",
+    "@emotion/styled": "^10.0.6",
+    "emotion-theming": "^10.0.6",
+    "firebase": "^5.8.1",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-alert": "^4.0.4",
+    "react-dom": "^16.7.0",
+    "react-transition-group": "^2.5.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
