--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "url": "https://github.com/FalconPilot/grand-conquest-node"
   },
   "scripts": {
-    "init": "mkdir src/backend/app",
+    "build": "parcel build src/frontend/index.html",
+    "clean": "rm -r dist",
     "dev-server": "dotenv nodemon src/backend/app.js",
-    "dev-front": "parcel src/frontend/index.html",
+    "dev-front": "parcel watch src/frontend/index.html",
     "dev": "concurrently \"npm run dev-server\" \"npm run dev-front\"",
-    "start": "npm run dev"
+    "prod-server": "node run src/backend/app.js",
+    "prod": "npm run build && npm run prod-server"
   },
   "dependencies": {
     "colors": "^1.3.3",
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
-    "parcel": "^1.11.0",
     "parcel-bundler": "^1.11.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "sequelize": "^4.42.0"
   },
   "devDependencies": {
