--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -4,6 +4,9 @@
   "version": "0.1.0",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "@emotion/core": "^10.0.6",
     "@emotion/styled": "^10.0.6",
     "emotion-theming": "^10.0.6",
@@ -13,10 +16,5 @@
     "react-alert": "^4.0.4",
     "react-dom": "^16.7.0",
     "react-transition-group": "^2.5.3"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1"
   }
 }
